--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/salted26
-    username: salted26
+    url: jdbc:sqlserver://salted.database.windows.net:1433
+#    url: jdbc:mysql://localhost:3306/salted26
+    username: salted
     password: gksmfdlA!01
 
 # MyBatis ?? ??
