--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,21 @@
+server:
+  port: 8080
+
 spring:
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:sqlserver://salted.database.windows.net:1433
-#    url: jdbc:mysql://localhost:3306/salted26
+    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+    url: jdbc:sqlserver://salted.database.windows.net:1433;database=salted
     username: salted
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/salted26
+#    username: salted26
     password: gksmfdlA!01
+
+
 
 # MyBatis ?? ??
 mybatis:
   config-location: classpath:mybatis-config.xml
   mapper-locations: classpath:mapper/*.xml
+
+
