mysql update 및 쇼핑몰 정보 입력. select / update / insert / delete 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,14 +3,13 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
-    url: jdbc:sqlserver://salted.database.windows.net:1433;database=salted
-    username: salted
-#    driver-class-name: com.mysql.cj.jdbc.Driver
-#    url: jdbc:mysql://localhost:3306/salted26
-#    username: salted26
+#    driver-class-name: com.microsoft.sqlserver.jdbc.SQLServerDriver
+#    url: jdbc:sqlserver://salted.database.windows.net:1433;database=salted
+#    username: salted
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/salted26
+    username: salted26
     password: gksmfdlA!01
-
 
 
 # MyBatis ?? ??
